# session.js-client

./: .gitignore  bot_example.py  bot_example.ts  bun.lockb  create_session_account.py  requirements.txt  setup.py  signalservice.proto
.github/workflows/: python-tests.yml
network/: __init__.py
polling/: poller.py
polling/tests/: test_poller.py
session_py/: README.md  __init__.py  errors.py  logs.py  utils.py
session_py/attachments/: decrypt.py  encrypt.py
session_py/crypto/: keypair.py  message_decrypt.py  (+3 more)
session_py_client/: README.md  __init__.py  mnemonic.py  pyproject.toml  session.py  sogs.py  utils.py
session_py_client/attachments/: decrypt.py  encrypt.py
session_py_client/crypto/: __init__.py  message_decrypt.py  message_encrypt.py  message_padding.py
session_py_client/messages/: __init__.py  base.py  configuration.py  conversation_request.py  data_extraction.py  delete.py  read_receipt.py  shared_config.py  typing.py  utils.py  visible.py
session_py_client/profile/: __init__.py  decrypt.py  encrypt.py
session_py_client/protobuf/: signalservice_pb2.py
session_py_client/sample/: simple_bot.py
session_py_client/storage/: __init__.py  in_memory.py
session_py_client/tests/: test_attachments.py  test_avatar.py  test_crypto.py  test_keypair_from_mnemonic.py  test_messages.py  test_profile.py  test_session.py  test_sogs.py  test_storage.py  test_utils.py
tests/: test_attachments.py  test_group_encryption.py  test_mnemonic.py  test_py_signature.py  test_send_message.py  test_session.py  test_signal_schema.py  test_signature.ts  test_swarms.py
(+25 files in other folders)
