[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "session_py_client"
version = "0.1.0"
description = "Python client for Session"
license = {text = "MIT"}
authors = [
    {name = "Example", email = "example@example.com"}
]
dependencies = [
    "pynacl",
    "protobuf",
    "aiohttp",
    "typing",
    "dataclasses"
]

