[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "session_py_client"
version = "0.1.0"
description = "Python client for Session"
license = {text = "MIT"}
authors = [
    {name = "Example", email = "example@example.com"}
]
dependencies = [
    "pynacl",
    "protobuf",
    "aiohttp",
    "typing",
    "dataclasses",
    "cryptography"
]

[tool.setuptools]
packages = [
    "session_py_client",
    "session_py_client.attachments",
    "session_py_client.crypto",
    "session_py_client.messages",
    "session_py_client.profile",
    "session_py_client.protobuf",
    "session_py_client.storage",
]
package-dir = {"session_py_client" = "."}

